работа со стилями, переписал 2 модуля через sass, добавил sass в package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gekon",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+    "name": "gekon",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,31 +15,32 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
+    },
+    "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
+    },
+    "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+        "react-app",
+        "react-app/jest"
     ]
-  },
-  "browserslist": {
+    },
+    "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
     ]
-  }
+    }
 }
