--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "gekon",
 	"version": "0.1.0",
 	"private": true,
+	"engines" : { 
+		"npm" : ">=9.5.1 <10.1.0",
+		"node" : ">=18.16.0 <20.8.0"
+	},
 	"dependencies": {
 		"@babel/core": "^7.16.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
