--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "engines" : { 
+		"npm" : ">=9.5.1 <10.1.0",
+		"node" : ">=18.16.0 <20.8.0"
+	},
   "name": "backend",
   "version": "1.0.0",
   "description": "",
