--- a/package.json
+++ b/package.json
@@ -73,13 +73,9 @@
     "scripts": {
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
-        "test": "node scripts/test.js"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "test": "node scripts/test.js",
+        "prettier": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json}\"",
+        "prettier:fix": "npm run prettier -- --write"
     },
     "browserslist": {
         "production": [
@@ -92,15 +88,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "prettier": {
-        "trailingComma": "all",
-        "tabWidth": 4,
-        "semi": true,
-        "singleQuote": true,
-        "jsxSingleQuote": true,
-        "arrowParens": "avoid",
-        "useTabs": true
     },
     "jest": {
         "roots": [
