--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "react/react-in-jsx-scope": "off",
         "react/no-unescaped-entities": "off",
         "no-unused-vars": "off",
+        "no-undef": "off",
         "react/prop-types": 0,
         "prettier/prettier": [
             "error",
